# Astra

./: README.md  requirements_pretrain.txt  requirements_rl.txt  requirements_sft_classification.txt
Merlin-main/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Merlin-main/documentation/: demo.py  inference.md
Merlin-main/merlin/: __init__.py
Merlin-main/merlin/data/: __init__.py  dataloaders.py  download_data.py
Merlin-main/merlin/models/: __init__.py  build.py  i3res.py  load.py
Merlin-main/merlin/utils/: __init__.py
ensemble/: test.sh  train.py  train.sh
ensemble/dataset/: data_helper.py  data_module.py
ensemble/models/: classify18.py  labeler18.py
ensemble/models/lavis/: __init__.py
ensemble/models/lavis/common/: config.py  dist_utils.py  logger.py
ensemble/models/lavis/configs/: default.yaml
ensemble/models/lavis/models/: __init__.py  base_model.py  med.py
ensemble/models/lavis/processors/: __init__.py  blip_processors.py
ensemble/models/lavis/runners/: runner_base.py
ensemble/models/lavis/tasks/: __init__.py  base_task.py
pretrain/CT_CLIP/: setup.py
pretrain/CT_CLIP/ct_clip/: ct_clip.py
pretrain/CT_CLIP/ct_clip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pretrain/scripts/: CTCLIPTrainer.py  data.py  data_inference_nii.py  preprocess_data.py  run_train.py  run_train.sh
pretrain/scripts/src/: args.py
pretrain/transformer_maskgit/transformer_maskgit/: ctvit.py
pretrain/transformer_maskgit/transformer_maskgit.egg-info/: PKG-INFO  requires.txt
r1_v/src/: pth2safe.py  safe2pth.py
r1_v/src/r1-v/: run_grpo.sh
sft/: train.py
sft/config/: config.py
sft/dataset/: data_helper.py  data_module.py
sft/models/: Astra.py  chexbert.py  utils.py
sft/scripts/: test.sh  train.sh
(+25 files in other folders)
